<resources>
    <string name="app_name">Bachelor_Work</string>
    <string name="statistics">Statistics</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result_text">Your result: %s</string>
    <string name="invalid_weight">Invalid weight</string>
    <string name="one_rep_max_description">One Rep Max (1RM) is a vital metric in weight training, representing the maximum amount of weight an individual can lift for a single repetition with proper form. It\'s crucial for designing effective strength training programs.\n\nCalculation Methods:\n\nEpley Formula: Estimates 1RM using weight lifted and repetitions performed.\nBrzycki Formula: Calculates 1RM based on weight lifted and repetitions.\nLombardi Formula: Provides an alternative approach to estimating 1RM using weight lifted and repetitions.</string>
    <string name="add_health_metric">Add Health Metric</string>
    <string name="health_metric_name">Health Metric Name</string>
    <string name="value">Value</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_record">Enter your record</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="add_strength_metric">Add Strength Metric</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="max_lift">Max Lift</string>
    <string name="percentage">Percentage</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="close">Close</string>
    <string name="export">Export</string>
    <string name="enter_starting_weight">Enter starting weight:</string>
    <string name="starting_reps">Starting Reps:</string>
    <string name="number_of_sets">Number of Sets:</string>
    <string name="weight_increase_percentage">Weight Increase Percentage:</string>
    <string name="calculate_pyramid">Calculate Pyramid</string>
    <string name="show_weight_table">Show Weight Table</string>
    <string name="percentage_decrease">Percentage Decrease:</string>
    <string name="calculate_drop_set">Calculate Drop Set</string>
    <string name="enter_weight">Enter weight:</string>
    <string name="choose_reps">Choose Reps:</string>
    <string name="calculate_1rm_epley">Calculate 1RM (Epley)</string>
    <string name="calculate_1rm_brzycki">Calculate 1RM (Brzycki)</string>
    <string name="calculate_1rm_lombardi">Calculate 1RM (Lombardi)</string>
    <string name="body_weight">Body Weight</string>
    <string name="enter_body_weight">Enter Body Weight</string>
    <string name="body_fat_percentage">Body Fat Percentage</string>
    <string name="enter_body_fat_percentage">Enter Body Fat Percentage</string>
    <string name="height">Height</string>
    <string name="enter_your_height">Enter Your Height</string>
    <string name="age">Age</string>
    <string name="enter_your_age">Enter Your Age</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="enter_your_bp">Enter Your BP</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="enter_your_hr">Enter Your HR</string>
    <string name="circumferences">Circumferences</string>
    <string name="waist">Waist</string>
    <string name="enter_circumference">Enter Circumference</string>
    <string name="hip">Hip</string>
    <string name="chest">Chest</string>
    <string name="arm">Arm</string>
    <string name="strength_metrics">Strength Metrics</string>
    <string name="health_metrics">Health Metrics</string>
    <string name="add_section">Add Section</string>
    <string name="injury_history">Injury History</string>
    <string name="allergies">Allergies</string>
    <string name="personal_notes">Personal Notes</string>
    <string name="weight_decrease_percentage">Weight Decrease Percentage:</string>
    <string name="calculate_reverse_pyramid">Calculate Reverse Pyramid</string>
    <string name="workout_time_seconds">Workout Time (seconds):</string>
    <string name="rest_time_seconds">Rest Time (seconds):</string>
    <string name="sets_remaining_0">Sets remaining: 0</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="_100">100%</string>
    <string name="_1">1</string>
    <string name="_10">10</string>
    <string name="_0_kg">0 kg</string>
    <string name="select_language">Select Language</string>
    <string name="apply">Apply</string>
    <string name="settings">Settings</string>
    <string name="guide">Guide</string>
    <string name="timer">Timer</string>
    <string name="welcome_to_the_weightlifting_training_app">Welcome to the Weightlifting Training App!</string>
    <string name="calculators_guide_description">Fill in all text fields in the calculators to get the most accurate results possible, then press the button to calculate.</string>
    <string name="history_guide_description">In this section, you can view the history of your calculator usage to revisit your previous calculations.</string>
    <string name="pdf_export_guide_description">In every calculator, history entry, and profile, there\'s a button labeled "Export to PDF." Pressing it will save your records or calculations in the Documents folder.</string>
    <string name="stopwatch_guide_description">The stopwatch is fully controlled by buttons; no typing is needed.</string>
    <string name="profile_guide_description">Record your measurements and other metrics to keep track of your health. Press the "Save" button at the bottom to save any changes.</string>
    <string name="statistics_guide_description">Displays records of health metrics and strength for each exercise for comparison.</string>
    <string-array name="language_options">
        <item>English</item>
        <item>Čeština</item>
    </string-array>
    <string-array name="language_codes">
        <item>en</item>
        <item>cs</item>
    </string-array>


</resources>