<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/home"
        android:id="@+id/navHome"
        android:icon="@drawable/baseline_home_24"/>

    <item android:title="@string/history"
        android:id="@+id/navHistory"
        android:icon="@drawable/baseline_history_24"/>
    <item
        android:title="Timer"
        android:id="@+id/navTimer"
        android:icon="@drawable/baseline_timer_24"
    />


    <item android:title="@string/profile"
        android:id="@+id/navProfile"
        android:icon="@drawable/baseline_person_24"/>

    <item android:title="@string/statistics"
        android:id="@+id/navStatistics"
        android:icon="@drawable/baseline_more_horiz_24"/>
</menu>