<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

    <!-- Title -->
    <TextView
            android:id="@+id/healthMetricsTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_health_metric"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

    <!-- Health Metric Name EditText -->
    <EditText
            android:id="@+id/healthMetricNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/health_metric_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="8dp"
          />

    <!-- Value TextView -->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

    <!-- Value EditText -->
    <EditText
            android:id="@+id/valueEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="8dp"
          />

    <!-- Save and Cancel buttons -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:gravity="end">

        <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@android:color/white" />

        <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@android:color/white" />

        <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>
