<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Main content layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/toolbar"
            android:padding="16dp">

            <!-- Weight input section -->
            <LinearLayout
                android:id="@+id/weightInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <!-- EditText for starting weight -->
                <EditText
                    android:id="@+id/starting_weight_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginStart="8dp"
                    android:hint="@string/enter_starting_weight"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:paddingTop="40dp"
                    android:layout_marginBottom="20dp"/>



            </LinearLayout>

            <!-- Number of Sets TextView -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <!-- TextView for "Starting Reps" -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/starting_reps"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <!-- TextView for "Number of Sets" -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/number_of_sets"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <!-- NumberPicker for starting reps -->
                <NumberPicker
                    android:id="@+id/starting_reps_picker"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1" />

                <!-- NumberPicker for number of sets -->
                <NumberPicker
                    android:id="@+id/num_sets_picker"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <!-- Percentage Decrease TextView -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/weight_decrease_percentage"
                android:textStyle="bold"
                android:textSize="18sp" />

            <!-- NumberPicker for choosing percentage decrease -->
            <NumberPicker
                android:id="@+id/percentage_decrease_picker"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="16dp" />

            <!-- Button to calculate reverse pyramid -->
            <Button
                android:id="@+id/calculate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate_reverse_pyramid"
                android:layout_marginTop="16dp" />

            <!-- Result TextView -->
            <TextView
                android:id="@+id/result_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="18sp" />

            <!-- Button to toggle the weight table -->
            <Button
                android:id="@+id/toggleTableButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_weight_table"
                android:layout_marginTop="16dp"
                android:layout_gravity="bottom" />

        </LinearLayout>

        <!-- Transparent background overlay -->
        <View
            android:id="@+id/backgroundOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"
            android:visibility="gone"
            android:layout_below="@id/toolbar" />

    </RelativeLayout>
